// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest can click outside document to trigger close 1`] = `

<div id="autosuggest-9"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="false"
         aria-expanded="false"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="G"
         class="form-control"
  >
  <div class="autosuggest__results-container">
  </div>
</div>

`;

exports[`Autosuggest can display section header 1`] = `

<div id="autosuggest-12"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="G"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-12"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li class="autosuggest__results_title autosuggest__results_title_default">
          Suggestions
        </li>
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item"
        >
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>

`;

exports[`Autosuggest can mount 1`] = `

<div id="autosuggest-0"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="false"
         aria-expanded="false"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value
         class="form-control"
  >
  <div class="autosuggest__results-container">
  </div>
</div>

`;

exports[`Autosuggest can render default suggestion value by property name 1`] = `

<div id="autosuggest-25"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant="autosuggest__results_item-0"
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         onblur="function blurred() {
                mockFn();
              }"
         onfocus="function focused() {
                mockFn();
              }"
         value="Frodo"
         class="form-control autosuggest__input-open cool-class"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-25"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          undefined
        </li>
      </ul>
    </div>
  </div>
</div>

`;

exports[`Autosuggest can render simplest component with single onSelected 1`] = `

<div id="autosuggest-19"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="phonics"
         class="form-control autosuggest__input-open cool-class"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-19"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item"
        >
          life of fred math
        </li>
        <li role="option"
            data-suggestion-index="5"
            data-section-name="default"
            id="autosuggest__results_item-5"
            class="autosuggest__results_item"
        >
          magic school bus
        </li>
        <li role="option"
            data-suggestion-index="6"
            data-section-name="default"
            id="autosuggest__results_item-6"
            class="autosuggest__results_item"
        >
          math mammoth light blue
        </li>
        <li role="option"
            data-suggestion-index="7"
            data-section-name="default"
            id="autosuggest__results_item-7"
            class="autosuggest__results_item"
        >
          handwriting
        </li>
        <li role="option"
            data-suggestion-index="8"
            data-section-name="default"
            id="autosuggest__results_item-8"
            class="autosuggest__results_item"
        >
          math
        </li>
        <li role="option"
            data-suggestion-index="9"
            data-section-name="default"
            id="autosuggest__results_item-9"
            class="autosuggest__results_item"
        >
          minecraft
        </li>
        <li role="option"
            data-suggestion-index="10"
            data-section-name="default"
            id="autosuggest__results_item-10"
            class="autosuggest__results_item"
        >
          free worksheets
        </li>
        <li role="option"
            data-suggestion-index="11"
            data-section-name="default"
            id="autosuggest__results_item-11"
            class="autosuggest__results_item"
        >
          4th grade
        </li>
        <li role="option"
            data-suggestion-index="12"
            data-section-name="default"
            id="autosuggest__results_item-12"
            class="autosuggest__results_item"
        >
          snap circuits
        </li>
        <li role="option"
            data-suggestion-index="13"
            data-section-name="default"
            id="autosuggest__results_item-13"
            class="autosuggest__results_item"
        >
          bath toys
        </li>
        <li role="option"
            data-suggestion-index="14"
            data-section-name="default"
            id="autosuggest__results_item-14"
            class="autosuggest__results_item"
        >
          channies
        </li>
        <li role="option"
            data-suggestion-index="15"
            data-section-name="default"
            id="autosuggest__results_item-15"
            class="autosuggest__results_item"
        >
          fred
        </li>
        <li role="option"
            data-suggestion-index="16"
            data-section-name="default"
            id="autosuggest__results_item-16"
            class="autosuggest__results_item"
        >
          lego
        </li>
        <li role="option"
            data-suggestion-index="17"
            data-section-name="default"
            id="autosuggest__results_item-17"
            class="autosuggest__results_item"
        >
          math life of fred
        </li>
        <li role="option"
            data-suggestion-index="18"
            data-section-name="default"
            id="autosuggest__results_item-18"
            class="autosuggest__results_item"
        >
          multiplication
        </li>
        <li role="option"
            data-suggestion-index="19"
            data-section-name="default"
            id="autosuggest__results_item-19"
            class="autosuggest__results_item"
        >
          thinking tree
        </li>
      </ul>
    </div>
  </div>
</div>

`;

exports[`Autosuggest can render suggestions 1`] = `

<div id="autosuggest-2"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant="autosuggest__results_item-0"
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         onclick="function clicked() {
        mockFn();
      }"
         name="q"
         value="clifford kits"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-2"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item"
        >
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>

`;

exports[`Autosuggest can select from suggestions using keystroke 1`] = `

<div id="autosuggest-7"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="false"
         aria-expanded="false"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="G"
         class="form-control"
  >
  <div class="autosuggest__results-container">
  </div>
</div>

`;

exports[`Autosuggest can use escape key to exit 1`] = `

<div id="autosuggest-5"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="false"
         aria-expanded="false"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="G"
         class="form-control"
  >
  <div class="autosuggest__results-container">
  </div>
</div>

`;

exports[`Autosuggest is aria complete 1`] = `

<div id="autosuggest-16"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant="autosuggest__results_item-2"
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         value="phonics"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-16"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item"
        >
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>

`;

exports[`Autosuggest onBlur and onFocus work as expected, including deprecation warnings 1`] = `

<div id="autosuggest-22"
     data-server-rendered="true"
>
  <input type="text"
         autocomplete="off"
         role="combobox"
         aria-autocomplete="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         aria-expanded="true"
         id="autosuggest__input"
         initialvalue
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         name="q"
         onblur="function blurred() {
                mockFn();
              }"
         onfocus="function focused() {
                mockFn();
              }"
         value="G"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div aria-labelledby="autosuggest-22"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item"
        >
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>

`;
